refactor and update

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <title>Johnathon Hutt Portfolio</title>
   <link href="https://fonts.googleapis.com/css?family=Cutive+Mono|Raleway&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
+  <script src="https://kit.fontawesome.com/4b7e22b676.js" crossorigin="anonymous"></script>
+  <link rel="icon" href="images/rubber_duck.ico">
 </head>
 
 <body>
@@ -17,8 +19,8 @@
   </nav>
   <div class="welcome" id="welcome-section">
     <div class="titleWrapper">
-      <h1 class="title">Hi, I'm Johnathon</h1>
-      <p class="subtitle">a {web-developer;}</p>
+      <h1 class="title">Johnathon Hutt</h1>
+      <p class="subtitle">{web-developer;}</p>
     </div>
     <br>
     <p class="quote">"Handcrafting artisan websites from the finest letters, numbers and symbols since 2018."</p>
@@ -29,13 +31,13 @@
       <h2 class="sectionTitle">About Me</h2>
       <p class="myStory">I enjoy making things.<br>
         As a child it was mostly legos, drawings, models and miniatures.<br>
-        As a teenager it was skateboards and BMX bikes.<br>
-        After that I spent a lot of time making small molecules as an organic chemist.<br><br>
-        Then my curiosity led me into the world of computers.<br>
+        As a teenager it was skateboards, BMX bikes and dirt jumps.<br>
+        After that I spent my time making small molecules as an organic chemist.<br><br>
+        Somewhere in there I found computers.<br>
         And I immediately fell in love with their limitless creative power.<br>
-        Oh and the overhead for making intangible computer programs is dramatically less than molecules.<br>
-        Which is great :).<br>
-        So now I'm diligently working towards a career in software development.<br>
+        Oh and the overhead for intangible computer programs << molecules.<br>
+        So these days I find myself mixing more fonts than reagents.<br>
+        Which is great : ).<br>
         Check out some of my projects below.
       </p>
     </div>
@@ -43,38 +45,38 @@
   </div>
 
   <div class="projects" id="projects">
-    <h3 class="sectionTitle">My Projects</h3>
+    <h2 class="sectionTitle">My Projects</h2>
     <div class="project-tile">
-      <h4 class="projectTitle">Mario Matching</h4>
+      <h3 class="projectTitle">Mario Matching</h3>
       <a class="marioMatching tile" href="https://johnathonhutt.github.io/mario-matching/">
-        <img src="images/matching.png" alt="">
+        <img src="images/matching.png" alt="Mario Matching Game">
       </a>
     </div>
     <div class="project-tile">
-      <h4 class="projectTitle">Mario Maze</h4>
+      <h3 class="projectTitle">Mario Maze</h3>
       <a class="tile" href="https://johnathonhutt.github.io/mario-maze/">
-        <img src="images/maze_976_821.png" alt="">
+        <img src="images/maze_976_821.png" alt="Mario Maze Game">
       </a>
     </div>
     <div class="project-tile">
-      <h4 class="projectTitle">Futurama Quote Game</h4>
+      <h3 class="projectTitle">Futurama Quote Game</h3>
       <a class="tile" href="https://johnathonhutt.github.io/futurama-game-mobile/">
-        <img src="images/fut-quote-game.png" alt="">
+        <img src="images/fut-quote-game.png" alt="Futurama Quote Game">
       </a>
     </div>
     <div class="project-tile">
-      <h4 class="projectTitle">100 Pixels: Pixel Art</h4>
+      <h3 class="projectTitle">100 Pixels: Pixel Art</h3>
       <a class="tile" href="https://johnathonhutt.github.io/pixelArt/">
-        <img src="images/100-pixels.png" alt="">
+        <img src="images/100-pixels.png" alt="Pixel Art Game">
       </a>
     </div>
   </div>
 
   <div class="contact" id="contact">
     <div class="contactWrapper">
-      <a class="contactLink" href="https://github.com/JohnathonHutt">GitHub</a>
-      <a class="contactLink" href="https://twitter.com/johnathon_hutt">Twitter</a>
-      <a class="contactLink" href="https://www.linkedin.com/in/johnathon-hutt-33224b6a/">LinkedIn</a>
+      <a class="contactLink" href="https://github.com/JohnathonHutt"><i class="fab fa-github"></i>  GitHub</a>
+      <a class="contactLink" href="https://twitter.com/johnathon_hutt"><i class="fab fa-twitter"></i>  Twitter</a>
+      <a class="contactLink" href="https://www.linkedin.com/in/johnathon-hutt-33224b6a/"><i class="fab fa-linkedin"></i>  LinkedIn</a>
     </div>
   </div>
 
