Add hide-when-scrolling navbar feature

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <p class="subtitle">{web-developer;}</p>
     </div>
     <br>
-    <p class="quote">"Handcrafting artisan websites from the finest letters, numbers and symbols since 2018."</p>
+    <p class="quote">"Handcrafting artisan websites from the finest letters, numbers and symbols."</p>
   </div>
 
   <div class="about" id="about">
@@ -78,6 +78,8 @@
       <a class="contactLink" href="https://twitter.com/johnathon_hutt"><i class="fab fa-twitter"></i>  Twitter</a>
       <a class="contactLink" href="https://www.linkedin.com/in/johnathon-hutt-33224b6a/"><i class="fab fa-linkedin"></i>  LinkedIn</a>
     </div>
+    <p class="copyright">© 2019 Johnathon Hutt.</p>
+    <script src="index.js" charset="utf-8"></script>
   </div>
 
 </body>
